20151119
========
Updated mongo-java-driver to 3.1.1

20151015
========
Added parameter Connection String, in this way we allow to connect to mongodb with Connection string Uri 

20140718
========
- Now this component uses the new way to update extensions in VDP. From now on, you don't
  have to delete the previous version of the extension when an update is needed.
  This component will appear as "denodo-mongodb-customwrapper-5.0" in the Jar Extensions
  Management dialog in the VDP Admin Tool.
- Added write support (create, update, delete) - only for non-complex fields.
- Added delegation of ISNULL and ISNOTNULL to mongodb data source.