@@ -1,3 +1,8 @@
+20151202
+========
+-Fixed nullPointerException when there is a array or struct with a element with value null;
+-Avoided the representation of Arrays and struts empty (without elements) in the schema of getSchemaParameters
+ 
 20151119
 ========
 Updated mongo-java-driver to 3.1.1
